IA-1538: Hardcoding google-analytics block into header; possibly can remove when this  image is upgraded to python3

--- a/ckan/production.ini
+++ b/ckan/production.ini
@@ -209,6 +209,9 @@ smtp.mail_from = ${CKAN_SMTP_MAIL_FROM}
 # ckanext.pages.editor = medium
 ckanext.pages.editor = ckeditor
 
+## Google Analytics Settings
+google_analytics.id = ${CKAN_GOOGLE_ANALYTICS_ID}
+
 #ckan.featured_orgs = disaster
 
 ## Logging configuration
