--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,6 +36,7 @@ services:
     - CKAN_SMTP_PASSWORD=fake
     - APP_UUID=AAAAAAAA-0000-1111-2222-BBBBBBBBBBBB
     - SESSION_SECRET=AAAAAAAAAAAAAAAAAAAAAAAAA
+    - CKAN_GOOGLE_ANALYTICS_ID=UA-000000-1
     ## AWS Configuration: To pull from AWS ParameterStore/SecretsManager, use the following:
     #- AWS_PROFILE=<your-profile-name-here>
     #- POSTGRES_PASSWORD_PSID=/ckan/staging/db_password/postgres
