--- a/ckan/Dockerfile
+++ b/ckan/Dockerfile
@@ -59,8 +59,8 @@ RUN ckan-pip install -U pip \
     && ln -s $CKAN_SRC/ckan/config/who.ini $CKAN_CONFIG/who.ini \
     && chown -R ckan:ckan $CKAN_HOME $CKAN_VENV $CKAN_CONFIG $CKAN_STORAGE_PATH
 
-# install pages plugin
-RUN ckan-pip install -e 'git+https://github.com/ckan/ckanext-pages.git#egg=ckanext-pages'
+## install pages plugin
+#RUN ckan-pip install -e 'git+https://github.com/ckan/ckanext-pages.git#egg=ckanext-pages'
 
 # Install custom files
 COPY images/* $CKAN_SRC/ckan/public/base/images/
