--- a/ckan/production.ini
+++ b/ckan/production.ini
@@ -13,7 +13,8 @@
 
 [DEFAULT]
 
-# WARNING: *THIS SETTING MUST BE SET TO FALSE ON A PRODUCTION ENVIRONMENT*
+# WARNING: *THIS SETTING MUST BE SET TO FALSE ON A PUBLIC ENVIRONMENT*
+# With debug mode enabled, a visitor to your site could execute malicious commands.
 debug = false
 
 [server:main]
@@ -28,11 +29,11 @@ cache_dir = /tmp/%(ckan.site_id)s/
 beaker.session.key = ckan
 
 # This is the secret token that the beaker library uses to hash the cookie sent
-# to the client. `paster make-config` generates a unique value for this each
+# to the client. `ckan generate config` generates a unique value for this each
 # time it generates a config file.
 beaker.session.secret = ${SESSION_SECRET}
 
-# `paster make-config` generates a unique value for this each time it generates
+# `ckan generate config` generates a unique value for this each time it generates
 # a config file.
 app_instance_uuid = ${APP_UUID}
 
@@ -73,7 +74,19 @@ ckan.auth.user_delete_organizations = true
 ckan.auth.create_user_via_api = false
 ckan.auth.create_user_via_web = false
 ckan.auth.roles_that_cascade_to_sub_groups = admin
+ckan.auth.public_user_details = false
+ckan.auth.public_activity_stream_detail = false
+ckan.auth.allow_dataset_collaborators = false
+ckan.auth.create_default_api_keys = false
 
+## API Token Settings
+api_token.nbytes = 60
+api_token.jwt.encode.secret = string:${CKAN_API_TOKEN_ENCODE_SECRET}
+api_token.jwt.decode.secret = string:${CKAN_API_TOKEN_ENCODE_SECRET}
+api_token.jwt.algorithm = HS256
+
+## API Token: expire_api_token plugin
+expire_api_token.default_lifetime = 3600
 
 ## Search Settings
 
@@ -101,7 +114,7 @@ ckan.redis.url = ${CKAN_REDIS_URL}
 # Note: Add ``datastore`` to enable the CKAN DataStore
 #       Add ``datapusher`` to enable DataPusher
 #       Add ``resource_proxy`` to enable resorce proxying and get around the same origin policy
-ckan.plugins = stats text_view image_view recline_view datastore datapusher pages
+ckan.plugins = stats text_view image_view recline_view datastore datapusher
 
 # Define which views should be created by default
 # (plugins must be loaded in ckan.plugins)
@@ -166,6 +179,11 @@ ckan.feeds.author_link =
 ckan.max_resource_size = 2048
 #ckan.max_image_size = 2
 
+## Webassets Settings
+#ckan.webassets.use_x_sendfile = false
+#ckan.webassets.path = /var/lib/ckan/webassets  #TODO: Maybe EFS?
+
+
 ## Datapusher settings
 
 # Make sure you have set up the DataStore
@@ -214,9 +232,12 @@ google_analytics.id = ${CKAN_GOOGLE_ANALYTICS_ID}
 
 #ckan.featured_orgs = disaster
 
+## Background Job Settings
+ckan.jobs.timeout = 180
+
 ## Logging configuration
 [loggers]
-keys = root, ckan, ckanext
+keys = root, ckan, ckanext, werkzeug
 
 [handlers]
 keys = console
@@ -227,6 +248,12 @@ keys = generic
 [logger_root]
 level = WARNING
 handlers = console
+
+[logger_werkzeug]
+level = WARNING
+handlers = console
+qualname = werkzeug
+propagate = 0
 
 [logger_ckan]
 level = INFO
