IA-1754: additional wip

--- a/ckan/Dockerfile
+++ b/ckan/Dockerfile
@@ -66,11 +66,11 @@ RUN ckan-pip install -U pip \
 COPY images/* $CKAN_SRC/ckan/public/base/images/
 RUN mkdir $CKAN_SRC/tmp
 COPY overrides/* $CKAN_SRC/tmp/
-RUN cp $CKAN_SRC/tmp/promoted.html $CKAN_SRC/ckan/templates/home/snippets/promoted.html
+####RUN cp $CKAN_SRC/tmp/promoted.html $CKAN_SRC/ckan/templates/home/snippets/promoted.html
 
 # Copy header override; this can probably be removed when upgrade to python3 happens
 # to use the official googleanalytics plugin instead
-RUN cp $CKAN_SRC/tmp/header.html $CKAN_SRC/ckan/templates/header.html
+####RUN cp $CKAN_SRC/tmp/header.html $CKAN_SRC/ckan/templates/header.html
 # Add extra helper functions
 RUN cat $CKAN_SRC/tmp/extra-helper-functions.py >> $CKAN_SRC/ckan/lib/helpers.py
 
