Adding fail mail server for testing

--- a/ckan/production.ini
+++ b/ckan/production.ini
@@ -209,8 +209,8 @@ ckan.hide_activity_from_users = %(ckan.site_id)s
 
 ## Email settings
 
-email_to = ${CKAN_SMTP_MAIL_TO}
-error_email_from = ${CKAN_SMTP_MAIL_FROM}
+email_to = ${CKAN_SMTP_ERROR_MAIL_TO}
+error_email_from = ${CKAN_SMTP_ERROR_MAIL_FROM}
 smtp.server = ${CKAN_SMTP_SERVER}
 smtp.starttls = ${CKAN_SMTP_STARTTLS}
 smtp.user = ${CKAN_SMTP_USER}
@@ -256,13 +256,13 @@ qualname = werkzeug
 propagate = 0
 
 [logger_ckan]
-level = INFO
+level = WARNING
 handlers = console
 qualname = ckan
 propagate = 0
 
 [logger_ckanext]
-level = DEBUG
+level = WARNING
 handlers = console
 qualname = ckanext
 propagate = 0
