--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,6 +38,7 @@ services:
     - APP_UUID=AAAAAAAA-0000-1111-2222-BBBBBBBBBBBB
     - SESSION_SECRET=AAAAAAAAAAAAAAAAAAAAAAAAA
     - CKAN_GOOGLE_ANALYTICS_ID=UA-000000-1
+    - CKAN_PORT=80
     ## AWS Configuration: To pull from AWS ParameterStore/SecretsManager, use the following:
     #- AWS_PROFILE=<your-profile-name-here>
     #- POSTGRES_PASSWORD_PSID=/ckan/staging/db_password/postgres
@@ -104,7 +105,6 @@ services:
         }
         sleep 20;
         waitfor localhost 80;
-        #export CKAN_INI=/etc/ckan/production.ini
         ckan user add ckanadmin email=ckanadmin@localhost.ckan password=ckanadmin;
         ckan sysadmin add ckanadmin
       "
