--- a/ckan/production.ini
+++ b/ckan/production.ini
@@ -81,8 +81,8 @@ ckan.auth.create_default_api_keys = false
 
 ## API Token Settings
 api_token.nbytes = 60
-api_token.jwt.encode.secret = string:${CKAN_API_TOKEN_ENCODE_SECRET}
-api_token.jwt.decode.secret = string:${CKAN_API_TOKEN_ENCODE_SECRET}
+api_token.jwt.encode.secret = string:${CKAN_API_TOKEN_SECRET}
+api_token.jwt.decode.secret = string:${CKAN_API_TOKEN_SECRET}
 api_token.jwt.algorithm = HS256
 
 ## API Token: expire_api_token plugin
@@ -250,7 +250,7 @@ level = WARNING
 handlers = console
 
 [logger_werkzeug]
-level = WARNING
+level = INFO
 handlers = console
 qualname = werkzeug
 propagate = 0
