--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,143 +1,123 @@
-version: '3'
-# psql -t -l postgresql://ckan_default:Fearless@db/ckan_default
-# https://docs.ckan.org/en/ckan-2.7.3/maintaining/configuration.html
-# https://docs.ckan.org/projects/datapusher/en/latest/development.html
+version: '3.3'
+
 volumes:
   ckan:
   solr:
   postgres:
 
-services:
+networks:
+  vpc:
+    driver: bridge
+    ipam:
+      config:
+      - subnet: 10.10.0.0/16
+        gateway: 10.10.0.1
 
+services:
   ckan:
     container_name: ckan
     image: ckan
     build:
       context: ./ckan/
-    network_mode: host
     expose:
     - 80
+    ports:
+    - 80:80
+    networks:
+      vpc:
+        ipv4_address: 10.10.0.2
     environment:
     # Environment Specific
     - CKAN_PORT=80
-    - POSTGRES_FQDN=localhost
-    - REDIS_FQDN=localhost
-    - SOLR_FQDN=localhost
-    - DATAPUSHER_FQDN=localhost
-    - CKAN_SITE_URL=http://localhost
-    #- CKAN_SMTP_ERROR_MAIL_TO=admin@localhost.developers
-    #- CKAN_SMTP_ERROR_MAIL_FROM=errors@localhost.ckan
-    - CKAN_SMTP_MAIL_FROM=ckan_server@localhost.ckan
-    - CKAN_API_TOKEN_ENCODE_SECRET=9OzsqKgYG4o_-6RGZ14ebdsh6
-    - CKAN_API_TOKEN_DECODE_SECRET=9OzsqKgYG4o_-6RGZ14ebdsh6
-    - SMTP_FQDN=localhost   # (Optional) Defaults to 'email-smtp.us-east-1.amazonaws.com'
-    - SMTP_PORT=1025        # (Optional) Defaults to '587'
+    - POSTGRES_FQDN=postgres
+    - REDIS_FQDN=redis
+    - SOLR_FQDN=solr
+    - DATAPUSHER_FQDN=datapusher
+    - CKAN_SITE_URL=http://sba.ckan.com
+    - CKAN_SMTP_ERROR_MAIL_TO=devops@sba.ckan.com
+    - CKAN_SMTP_ERROR_MAIL_FROM=errors@sba.ckan.com
+    - CKAN_SMTP_MAIL_FROM=admin@sba.ckan.com
+    - SMTP_FQDN=smtp
+    - SMTP_PORT=1025
     # Secrets
-    - POSTGRES_PASSWORD=fearless
-    - CKAN_SMTP_USER=fake
-    - CKAN_SMTP_PASSWORD=fake
     - APP_UUID=AAAAAAAA-0000-1111-2222-BBBBBBBBBBBB
+    - CKAN_API_TOKEN_SECRET=9OzsqKgYG4o_-6RGZ14ebdsh6
+    #- CKAN_GOOGLE_ANALYTICS_ID=UA-000000-1
+    - CKAN_SMTP_PASSWORD=fake
+    - CKAN_SMTP_USER=fake
+    - POSTGRES_PASSWORD=fearless
     - SESSION_SECRET=AAAAAAAAAAAAAAAAAAAAAAAAA
-    - CKAN_GOOGLE_ANALYTICS_ID=UA-000000-1
     volumes:
     - ckan:/var/lib/ckan/
     ## AWS Configuration: uncomment this line and ensure you have your AWS credentials configured in your local ~/.aws directory
     #- ~/.aws/:/root/.aws/
 
-  ckan-datapusher:
+  datapusher:
     container_name: datapusher
     image: ckan-datapusher
     build:
       context: ./ckan-datapusher/
-    network_mode: host
     expose:
     - 8800
-  db:
+    ports:
+    - 8800:8800
+    networks:
+      vpc:
+        ipv4_address: 10.10.0.3
+    extra_hosts:
+    - sba.ckan.com:10.10.0.2
+
+  postgres:
     container_name: postgres
     image: postgres:11.1
-    network_mode: host
     environment:
     - POSTGRES_PASSWORD=fearless
     - POSTGRES_USER=ckan_default
     - POSTGRES_DB=ckan_default
     expose:
     - 5432
+    networks:
+      vpc:
+        ipv4_address: 10.10.0.4
     volumes:
     - postgres:/var/lib/postgresql/data/
 
-  ckan-solr:
+  solr:
     container_name: solr
     image: ckan-solr
-    network_mode: host
     build:
       context: ./ckan-solr/
     expose:
     - 8983
+    ports:
+    - 8983:8983
+    networks:
+      vpc:
+        ipv4_address: 10.10.0.5
     volumes:
     - solr:/opt/solr/server/solr/ckan/data/
 
   redis:
     container_name: redis
     image: redis:latest
-    network_mode: host
     expose:
     - 6379
+    ports:
+    - 6379:6379
+    networks:
+      vpc:
+        ipv4_address: 10.10.0.6
 
-  ckan-create-admin-user:
-    # Create user on startup, then shutdown
-    command: |
-      bash -c "
-        function waitfor() {
-          echo checking connection to $${1}:$${2};
-          while ! nc -z $$1 $$2;
-          do
-            echo waiting for $${1}:$${2};
-            sleep 3;
-          done;
-          echo Connected to $${1}:$${2};
-        }
-        sleep 20;
-        waitfor localhost 80;
-        ckan user add ckanadmin email=ckanadmin@localhost.ckan password=ckanadmin;
-        ckan sysadmin add ckanadmin
-      "
-    restart: "no"
-    depends_on:
-    - "ckan"
-    image: ckan
-    build:
-      context: ./ckan/
-    network_mode: host
-    environment:
-    # Environment Specific
-    - CKAN_PORT=5000
-    - POSTGRES_FQDN=localhost
-    - REDIS_FQDN=localhost
-    - SOLR_FQDN=localhost
-    - DATAPUSHER_FQDN=localhost
-    - CKAN_SITE_URL=http://localhost
-    - CKAN_SMTP_MAIL_TO=fake@e.mail
-    - CKAN_SMTP_MAIL_FROM=fake@e.mail
-    - SMTP_FQDN=localhost     # (Optional) Defaults to 'email-smtp.us-east-1.amazonaws.com'
-    - SMTP_PORT=1025          # (Optional) Defaults to '587'
-    # Secrets
-    - POSTGRES_PASSWORD=fearless
-    - CKAN_SMTP_USER=fake
-    - CKAN_SMTP_PASSWORD=fake
-    - APP_UUID=AAAAAAAA-0000-1111-2222-BBBBBBBBBBBB
-    - SESSION_SECRET=AAAAAAAAAAAAAAAAAAAAAAAAA
-    - CKAN_API_TOKEN_ENCODE_SECRET=9OzsqKgYG4o_-6RGZ14ebdsh6
-    - CKAN_API_TOKEN_DECODE_SECRET=9OzsqKgYG4o_-6RGZ14ebdsh6
-    volumes:
-    - ckan:/var/lib/ckan/
-    ## AWS Configuration: uncomment this line and ensure you have your AWS credentials configured in your local ~/.aws directory
-    #- ~/.aws/:/root/.aws/
-
-  fake_smtp:
+  smtp:
     image: reachfive/fake-smtp-server
-    network_mode: host
     expose:
     - 1025
     - 1080
+    ports:
+    - 1025:1025
+    - 1080:1080
+    networks:
+      vpc:
+        ipv4_address: 10.10.0.7
     command: ["node", "index.js", "--auth", "fake:fake"]
 
