--- a/ckan/production.ini
+++ b/ckan/production.ini
@@ -49,6 +49,7 @@ who.log_file = %(cache_dir)s/who_log.ini
 ## Database Settings
 sqlalchemy.url = ${CKAN_SQLALCHEMY_URL}
 
+
 ckan.datastore.write_url = ${CKAN_DATASTORE_WRITE_URL}
 ckan.datastore.read_url = ${CKAN_DATASTORE_READ_URL}
 
@@ -162,9 +163,9 @@ ckan.display_timezone = server
 
 ## Internationalisation Settings
 ckan.locale_default = en
-ckan.locale_order = en pt_BR ja it cs_CZ ca es fr el sv sr sr@latin no sk fi ru de pl nl bg ko_KR hu sa sl lv
-ckan.locales_offered =
-ckan.locales_filtered_out = en_GB
+ckan.locale_order = en es fr
+ckan.locales_offered = en es fr
+ckan.locales_filtered_out = en_GB pt_BR ja it cs_CZ ca el sv sr sr@latin no sk fi ru de pl nl bg ko_KR hu sa sl lv es_AR tl pt_PT km zh_TW th zh_CN uk sr_latin gl mn_MN mk hr am uk_UA he tr id fa_IR is vi da_DK ne ro eu lt en_AU sq ar
 
 ## Feeds Settings
 
