IA-2065: Adding datapusher callback url

--- a/ckan/production.ini
+++ b/ckan/production.ini
@@ -191,6 +191,7 @@ ckan.max_resource_size = 2048
 
 ckan.datapusher.formats = csv xls xlsx tsv application/csv application/vnd.ms-excel application/vnd.openxmlformats-officedocument.spreadsheetml.sheet
 ckan.datapusher.url = ${CKAN_DATAPUSHER_URL}
+ckan.datapusher.callback_url_base = ${CKAN_DATAPUSHER_CALLBACK_URL}
 ckan.datapusher.assume_task_stale_after = 3600
 
 # Resource Proxy settings
