IA-2065: Removing xls, xlsx files from going to datapusher; unsetting the default recline proxy url

--- a/ckan/production.ini
+++ b/ckan/production.ini
@@ -189,10 +189,15 @@ ckan.max_resource_size = 2048
 
 # Make sure you have set up the DataStore
 
-ckan.datapusher.formats = csv xls xlsx tsv application/csv application/vnd.ms-excel application/vnd.openxmlformats-officedocument.spreadsheetml.sheet
+## Excel files no longer supported by xlrd
+#ckan.datapusher.formats = csv xls xlsx tsv application/csv application/vnd.ms-excel application/vnd.openxmlformats-officedocument.spreadsheetml.sheet
+ckan.datapusher.formats = csv tsv application/csv
 ckan.datapusher.url = ${CKAN_DATAPUSHER_URL}
 ckan.datapusher.callback_url_base = ${CKAN_DATAPUSHER_CALLBACK_URL}
 ckan.datapusher.assume_task_stale_after = 3600
+
+## Trying to prevent proxies in the event that there's no datastore data
+ckan.recline.dataproxy_url = ""
 
 # Resource Proxy settings
 # Preview size limit, default: 1MB
