IA-2500: Adding CKAN orbs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -236,7 +236,8 @@ jobs:
           directory: ckan
           image_name: ckan
       - snyk/scan:
-          token-variable: ${SNYK_TOKEN}
+          token-variable: SNYK_TOKEN
+          type: env_var_name
   test-ckan-datapusher-build:
     executor: circle-machine
     steps:
